--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "flask (>=3.1.0,<4.0.0)",
     "requests (>=2.32.3,<3.0.0)",
     "black (>=25.1.0,<26.0.0)",
-    "pytest (>=8.3.5,<9.0.0)"
+    "pytest (>=8.3.5,<9.0.0)",
+    "uwsgi (>=2.0.29,<3.0.0)"
 ]
 
 [tool.poetry]
