--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "black (>=25.1.0,<26.0.0)",
     "pytest (>=8.3.5,<9.0.0)",
     "uwsgi (>=2.0.29,<3.0.0)",
-    "ipdb (>=0.13.13,<0.14.0)"
+    "ipdb (>=0.13.13,<0.14.0)",
+    "marshmallow (>=4.0.0,<5.0.0)"
 ]
 
 [tool.poetry]
